2001-10-07  Michael Hope  <michaelh@juju.net.nz>

	* support/Util/NewAlloc.c (freeTrace): Changed free for the gc case to not free at all.  Fixes runtime segfault.

	* support/regression/tests/scott-compare3.c (c_abcd): Fixed up casts.

2001-10-07    <johan@FRIJA>

	* device/lib/gets.c (gets): fixed the return value.

2001-10-06  Michael Hope  <michaelh@juju.net.nz>
	* src/SDCCmain.c (WRITE_SEG_LOC): Fixed up to use Safe_strdup.

	* src/SDCCpeeph.c (peepHole): Fixed all leaks.  Added trace support for freeing lines.  Optimised restart logic to re-run instead of restart.  Now compiles dscan.c on ~60MB instead of ~200MB.

	* support/Util/NewAlloc.c: Added ability to use libgc instead of malloc.  Added Safe_free and Safe_strdup.  Added trace support where you can log allocations and free all at once.

	* src/z80/gen.c (genZ80Code): Added de-allocation via trace support.

	* src/pic/gen.c: Removed Safe_strdup.

	* configure.in: Added option to enable libgc support.

	* src/SDCCbitv.c (bitVectnBitsOn): Optimised.
	(bitVectUnion): Optimised.
	(bitVectIntersect): Optimised.
	(bitVectBitsInCommon): Optimised.
	(bitVectCplAnd): Optimised.

	* support/makebin/makebin.c (usage): Removed getopt as mingw32 doesn't have it.  Sigh.

2001-10-03 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c: distinguish between assembler debug and plain options

	* src/avr/main.c:   remove standard assembler options

	* src/ds390/main.c: remove standard assembler options

	* src/mcs51/main.c: remove standard assembler options

	* src/port.h: removed "PENDING" comment

2001-10-03 Bernhard Held <bernhard@bernhardheld.de>

	* src/device/lib/_mulint.c  : new, with assember functions

	* src/device/lib/_mullong.c : new, with assember functions

	* src/device/lib/_divuint.c : with assember functions

	* src/device/lib/_divsint.c : with assember functions

	* src/device/lib/_divulong.c: with assember functions

	* src/device/lib/_divslong.c: with assember functions
